build: add cabbage kimchi and korean steamed egg recipe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/oi-kimchi.html">Oi Kimchi</a>
+    <a href="recipes/cabbage-kimchi.html">Cabbage Kimchi</a>
+    <a href="recipes/korean-steamed-eggs.html">Korean Steamed Eggs</a>
 </body>
 </html>
